--- a/src/main/webapp/css/mainpage.css
+++ b/src/main/webapp/css/mainpage.css
@@ -30,7 +30,10 @@ a:visited {
 
 /* 차량정보 글박스 높이조정 */
 .recommend_car_info,.cheap_car_info,.old_car_info,.popular_car_info{
-    top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
 }
 
 
@@ -46,7 +49,6 @@ a:visited {
 /* 구분선 */
 .dividing_line{
     border-top: 1px solid lightgray;
-    top: 10px;
     width: 80%;
 }
 
@@ -66,7 +68,7 @@ a:visited {
 
 /* 추천 차량 4개 박스 */
 .show_recommend_car{
-    margin: 20px;
+	margin: 20px;
     width: 275px;
     height: 350px;
     border-radius: 3%;
@@ -78,6 +80,10 @@ a:visited {
     position: relative;
     cursor: pointer; 
     transition: all 0.5 ease;
+}
+
+.text_align{
+	align-items: center;
 }
 
 
