--- a/src/main/webapp/css/reservation.css
+++ b/src/main/webapp/css/reservation.css
@@ -549,7 +549,163 @@ li {
 	overflow: auto;
 }
 
+/* ----------모달 2 */
+.location-modal2-body {
+	position: absolute;
+	z-index: 300;
+	top: 50vh;
+	/* 모달을 화면가운데 놓기위함.  */
+	width: 1000px;
+	/* 모달의 가로크기  */
+	height: 600px;
+	/* 모달의 세로크기  */
+	padding: 50px;
+	text-align: center;
+	background-color: white;
+	/* 모달창 배경색 흰색 */
+	border-radius: 10px;
+	/* 테두리  */
+	box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+	/* 테두리 그림자  */
+	transform: translateY(-50%);
+	/* 모듈창열었을때 위치설정 가운데로  */
+	display: flex;
+	justify-content: center;
+	align-items: start;
+}
+
+/* 모달창 - 지역 닫기 버튼 */
+.location-modal2-close-Btn {
+	position: absolute;
+	top: 12px;
+	right: 22px;
+	font-size: 1.5rem;
+	z-index: 400;
+	cursor: pointer;
+}
+
+.location-modal2-header-text {
+	position: absolute;
+	top: 11px;
+	left: 72px;
+	font-size: 1.6rem;
+	font-weight: bold;
+	color: #0D6FFC;
+}
+
+/* 모달창 - 지역 아산/천안 컨테이너 */
+.location-modal2-body-container {
+	width: 95%;
+	height: 90%;
+	display: flex;
+	flex-flow: row wrap;
+}
+
+/* 모달창 - 지역 아산 */
+.location-modal2-mainBox1 {
+	color: white;
+	border-right: white;
+	background-color: #0D6FFC;
+	width: 50%;
+	height: 10%;
+	padding-top: 6px;
+	border-radius: 10px 10px 0px 0px;
+	font-size: 1.4rem;
+	font-weight: bold;
+}
+
+.location-modal2-mainBox1-item {
+	color: #27374D;
+	background-color: #eeeeee;
+	width: 100%;
+	margin-top: 9px;
+	height: 390px;
+	font-weight: bold;
+	font-size: 1.2rem;
+}
+
+.asanList2 {
+	padding: 15px;
+}
+
+.asanList2:hover {
+	background-color: #0D6FFC;
+	color: white;
+	cursor: pointer;
+}
+
+.selected {
+	background-color: #0D6FFC;
+	color: white;
+}
+
+.cheonanList2 {
+	padding: 15px;
+}
+
+.cheonanList2:hover {
+	background-color: #0D6FFC;
+	color: white;
+	cursor: pointer;
+}
+
+/* 모달창 - 지역 천안 */
+.location-modal2-mainBox2 {
+	color: white;
+	background-color: #0D6FFC;
+	width: 50%;
+	height: 10%;
+	padding-top: 6px;
+	border-left: white;
+	border-radius: 10px 10px 0px 0px;
+	font-size: 1.4rem;
+	font-weight: bold;
+}
+
 .location-modal-check-Btn {
+	width: 160px;
+	height: 60px;
+	border-radius: 10px;
+	position: absolute;
+	bottom: 25px;
+	right: 73px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	font-size: 1.5rem;
+	font-weight: bold;
+	background-color: #999999;
+	color: white;
+}
+
+.location-modal2-mainBox2-item::-webkit-scrollbar {
+	width: 10px;
+}
+
+.location-modal2-mainBox2-item::-webkit-scrollbar-thumb {
+	background-color: #999999;
+	border-radius: 10px;
+}
+
+.location-modal2-mainBox2-item::-webkit-scrollbar-track {
+	background-color: #e1e1e1;
+}
+
+.location-modal2-mainBox2-item {
+	color: black;
+	background-color: #eeeeee;
+	width: 100%;
+	margin-top: 9px;
+	height: 390px;
+	font-size: 1.2rem;
+	font-weight: lighter;
+	font-weight: bold;
+	color: #27374D;
+	overflow: auto;
+}
+
+.location-modal2-check-Btn {
 	width: 160px;
 	height: 60px;
 	border-radius: 10px;
