--- a/src/main/webapp/css/reservation.css
+++ b/src/main/webapp/css/reservation.css
@@ -53,7 +53,7 @@
 .place{
 	width: 310px;
 	height: 100%;
-	background-color: #F2F3F3;
+	background-color: #F3F3F3;
 	border-radius: 5px;
 	cursor: pointer;
 	display: flex;
@@ -61,6 +61,8 @@
 	align-items: center;
 	font-size: 20px;
 	font-weight: bold;
+	text-align: center;
+	border: 0;
 }
 
 /* 날짜 박스 */
@@ -759,4 +761,9 @@ li {
 /* selectBox의 z-index를 다른 필터들보다 높게 설정 */
 [data-role="selectBox"] {
     z-index: 1000; /* 적절한 숫자로 설정, 다른 필터보다 큰 값을 사용합니다. */
+}
+
+.carCheckBox {
+	width: 100px;
+	height: 50px;
 }
